force-app/main/default/objects/Service_Appointment__c/fields/Appointment_Date_1_day_before__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_1_day_before__c</fullName>
    <formula>Service_Appointment_Date__c - 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date 1 day before</label>
    <type>Date</type>
</CustomField>