force-app/main/default/objects/Service_Appointment__c/fields/Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>myCNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>