force-app/main/default/objects/Service_Appointment__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCK</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>CCA</fullName>
            </value>
            <value>
                <fullName>CCF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>