force-app/main/default/objects/Service_Appointment__c/fields/Car_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Car_Registration_No__c</fullName>
    <label>Car Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>