force-app/main/default/objects/Service_Appointment__c/fields/Contact_Non_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Non_Owner_Email__c</fullName>
    <formula>Contact__r.Email = Non_Owner_Email__c</formula>
    <label>Contact = Non Owner Email?</label>
    <type>Checkbox</type>
</CustomField>