force-app/main/default/objects/Service_Appointment__c/fields/Is_Non_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non Owner</label>
    <type>Checkbox</type>
</CustomField>