force-app/main/default/objects/Service_Appointment__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <defaultValue>&apos;-&apos;</defaultValue>
    <label>Mileage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>