force-app/main/default/objects/Service_Appointment__c/fields/PKD_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PKD_Indicator__c</fullName>
    <inlineHelpText>Pickup and Delivery indicator</inlineHelpText>
    <label>PKD Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>ONE_WAY_CO</fullName>
            </value>
            <value>
                <fullName>ONE_WAY_RO</fullName>
            </value>
            <value>
                <fullName>TWO_WAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>