force-app/main/default/objects/Service_Appointment__c/fields/QRCodeURL__c.field-meta.xml
<CustomField>
    <fullName>QRCodeURL__c</fullName>
    <formula>IF( NOT(ISNULL(Registered_Vehicle__c)), &quot;https://jccl-community.force.com/mymb/QRCodeMyMB?serviceappid=&quot; + Registered_Vehicle__r.Id, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QRCodeURL</label>
    <type>Text</type>
</CustomField>