force-app/main/default/objects/Service_Appointment__c/fields/Registered_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Registered_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Vehicle</label>
    <referenceTo>Registered_Vehicle__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>