force-app/main/default/objects/Service_Appointment__c/fields/Return_To__c.field-meta.xml
<CustomField>
    <fullName>Return_To__c</fullName>
    <defaultValue>&apos;-&apos;</defaultValue>
    <description>Return to Location</description>
    <inlineHelpText>Return to Location</inlineHelpText>
    <label>Return To</label>
    <type>TextArea</type>
</CustomField>