force-app/main/default/objects/Service_Appointment__c/fields/Service_Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Date_Time__c</fullName>
    <label>Service Appointment Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>