force-app/main/default/objects/Service_Appointment__c/fields/System_don_t_fire_MC__c.field-meta.xml
<CustomField>
    <fullName>System_don_t_fire_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System don&apos;t fire MC</label>
    <type>Checkbox</type>
</CustomField>