force-app/main/default/objects/Service_Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Service_Centre_Location__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Appointment_Date_Time__c</columns>
    <columns>Contact__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>