force-app/main/default/objects/Service_Appointment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Booking_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>eShop_Flag__c</columns>
    <columns>Mileage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>