force-app/main/default/objects/Service_Appointment__c/listViews/Custom.listView-meta.xml
<ListView>
    <fullName>Custom</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Booking_ID__c</columns>
    <columns>Service_Appointment_Date_Time__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Service_Centre_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Appointment__c.Service_Appointment_Guest</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Edit,Cancel</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/17/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>CCI</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
    </filters>
    <label>Custom</label>
</ListView>